--- a/config.ini.sample
+++ b/config.ini.sample
@@ -16,5 +16,5 @@ user=ubuntu
 password=xxx
 port=22
 host=127.0.0.1
-backup_path = /opt/backup
+backup_path = /opt/mysqlbackup/127.0.0.1
 reserve_days = 10
